--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A React.js list component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp",
+    "compile": "babel --presets es2015,stage-0,react -d ./ src/"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,18 @@
   "bugs": {
     "url": "https://github.com/React-Components-Organization/react.list/issues"
   },
-  "homepage": "https://github.com/React-Components-Organization/react.list#readme"
+  "homepage": "https://github.com/React-Components-Organization/react.list#readme",
+  "dependencies": {
+    "react": "^0.14.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-react": "^3.1.0",
+    "jshint": "^2.9.1"
+  }
 }
